...
      <LinearLayout
        android:id="@+id/drag_drop_accessible_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <ImageButton
          android:id="@+id/drag_drop_move_up_item"
          android:layout_width="48dp"
          android:layout_height="48dp"
          android:background="?attr/selectableItemBackground"
          android:clickable="true"
          android:contentDescription="@{viewModel.computeDragDropMoveUpItemContentDescription()}"
          android:enabled="@{viewModel.itemIndex != 0}"
...
          app:layout_constraintBottom_toBottomOf="parent"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintTop_toBottomOf="@+id/drag_drop_content_unlink_items"
          app:srcCompat="@drawable/ic_arrow_up_black_24dp" />

        <ImageButton
          android:id="@+id/drag_drop_move_down_item"
          android:layout_width="48dp"
          android:layout_height="48dp"
          android:background="?attr/selectableItemBackground"
          android:clickable="true"
          android:contentDescription="@{viewModel.computeDragDropMoveDownItemContentDescription()}"
          android:enabled="@{viewModel.itemIndex != viewModel.listSize-1}"
...
