<layout xmlns:android="http://schemas.android.com/apk/res/android">

  <data>

    <variable
      name="htmlContent"
      type="CharSequence" />
  </data>

  <TextView
    android:id="@+id/drag_drop_content_text_view"
    style="@style/Subtitle1ViewCenterVertical"
    android:paddingTop="12dp"
    android:paddingBottom="12dp"
    android:text="@{htmlContent}" />
</layout>
