<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:tools="http://schemas.android.com/tools"
  tools:context=".player.state.testing.StateFragmentTestActivity">

  <data>

    <import type="android.view.View" />

    <variable
      name="viewModel"
      type="org.oppia.android.app.player.state.testing.StateFragmentTestViewModel" />
  </data>

  <FrameLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <FrameLayout
      android:id="@+id/state_fragment_placeholder"
      android:layout_width="match_parent"
      android:layout_height="match_parent" />

    <FrameLayout
      android:id="@+id/exploration_fragment_placeholder"
      android:layout_width="match_parent"
      android:layout_height="match_parent" />

    <Button
      android:id="@+id/play_test_exploration_button"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="16dp"
      android:text="@string/exploration_activity_play_button_text"
      android:textAllCaps="false"
      android:visibility="@{viewModel.hasExplorationStarted ? View.GONE : View.VISIBLE}" />
  </FrameLayout>
</layout>
