...
      android:text="@string/drag_and_drop_interaction_group_merge_hint"
      android:textSize="14sp"
      android:textStyle="italic"
      android:visibility="@{viewModel.getGroupingStatus()? View.VISIBLE : View.GONE}" />

    <org.oppia.android.app.player.state.DragDropSortInteractionView
      android:id="@+id/drag_drop_interaction_recycler_view"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="@dimen/drag_drop_interaction_item_recycler_view_margin_top"
      android:overScrollMode="never"
      app:allowMultipleItemsInSamePosition="@{viewModel.getGroupingStatus()}"
      app:entityId="@{viewModel.entityId}"
...
